--- a/app/src/main/res/drawable/ic_marker.xml
+++ b/app/src/main/res/drawable/ic_marker.xml
@@ -1,14 +1,6 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="@color/purple_500">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M18.5,10.2c0,2.57 -2.1,5.79 -6.16,9.51L12,20.01l-0.34,-0.31C7.6,15.99 5.5,12.77 5.5,10.2c0,-3.84 2.82,-6.7 6.5,-6.7S18.5,6.35 18.5,10.2z"
-      android:fillAlpha="0.3"/>
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M12,2c4.2,0 8,3.22 8,8.2c0,3.32 -2.67,7.25 -8,11.8c-5.33,-4.55 -8,-8.48 -8,-11.8C4,5.22 7.8,2 12,2zM18,10.2C18,6.57 15.35,4 12,4s-6,2.57 -6,6.2c0,2.34 1.95,5.44 6,9.14C16.05,15.64 18,12.54 18,10.2zM12,12c-1.1,0 -2,-0.9 -2,-2s0.9,-2 2,-2s2,0.9 2,2S13.1,12 12,12z"/>
+<vector android:height="24dp" android:viewportHeight="128"
+    android:viewportWidth="128" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#1bce89" android:pathData="m24.192,81.548 l-17.692,39.808h115l-17.69,-39.808z"/>
+    <path android:fillColor="#fb4a59" android:pathData="m97.685,40.185a41.584,41.584 0,0 1,-2.564 12.9c-5.466,16.081 -18.759,36.66 -31.121,50.723 -12.362,-14.063 -25.655,-34.642 -31.122,-50.719a41.584,41.584 0,0 1,-2.564 -12.9,33.685 33.685,0 0,1 67.371,0z"/>
+    <path android:fillColor="#f2f2f2" android:pathData="M64,40.183m-16.842,0a16.842,16.842 0,1 1,33.684 0a16.842,16.842 0,1 1,-33.684 0"/>
 </vector>
